--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,3 +1,4 @@
+<form [formGroup]="projectForm" [ngClass]="projectForm.value.status">
   <div class="projectSection">
       <div class="projectRow space-between">
         <div class="left controls">
