adding password info

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,6 +6,10 @@
   </div>
 
   <div class="inputGroup right">
+      <div>Kies een wachtwoord met minstens een hoofdletter, cijfer en leesteken</div>
+  </div>
+
+  <div class="inputGroup right">
     <input type="submit" value="Registreren">
   </div>
 </form>
