--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -5,8 +5,8 @@
           <div (click)="goToOverview()"><img src="/assets/images/icon-back.svg" alt=""></div>
           <div (click)="onSubmit()"><img src="/assets/images/icon-save.svg" alt=""></div>
           <div *ngIf="projectId" (click)="removeProject()"><img src="/assets/images/icon-delete.svg" alt=""></div>
-          <div *ngIf="projectForm.value.invoiced && auth.isAdmin()" (click)="changeInvoicedStatus()"><img src="/assets/images/icon-invoice.svg" alt=""></div>
-          <div *ngIf="!projectForm.value.invoiced && auth.isAdmin()" (click)="changeInvoicedStatus()"><img src="/assets/images/icon-invoiced.svg" alt=""></div>
+          <!-- <div *ngIf="projectForm.value.invoiced && auth.isAdmin()" (click)="changeInvoicedStatus()"><img src="/assets/images/icon-invoice.svg" alt=""></div> -->
+          <!-- <div *ngIf="!projectForm.value.invoiced && auth.isAdmin()" (click)="changeInvoicedStatus()"><img src="/assets/images/icon-invoiced.svg" alt=""></div> -->
         </div>
         <div class="right">
           <label for="EpbReporter">Contactpersoon binnen<span
