--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -7,7 +7,7 @@
     </div>
   
     <div class="inputGroup right">
-      <input type="submit" value="Herstel wachtwoord">
+      <input type="submit" value="Nieuw wachtwoord aanvragen">
     </div>
   </form>
 </ng-container>
