--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -12,5 +12,5 @@
   </form>
 </ng-container>
 <ng-template #elseTemplate>
-  <div>Herstel aangevraagd, check je mailbox voor verder instructies.</div>
+  <div>Wachtwoordherstel aangevraagd, controleer je mailbox voor verder instructies.</div>
 </ng-template>
