--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -78,10 +78,14 @@
     }
 }
 
+.projectList {
+    border-bottom: 1px solid $infiltro-border-grey;
+    padding-bottom: 25px;
+}
+
 .project {
     padding: 0 15px;
     margin: 10px 0;
-    border-bottom: 1px solid $infiltro-border-grey;
     display: grid;
     grid-template-columns: 100px 1fr 100px 150px 15px;
     transition: 0.5s ease;
@@ -151,7 +155,7 @@
     justify-content: center;
     height: calc(100vh - 200px);
 
-    > * {
+    >* {
         margin-right: 20px;
     }
 }
