--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -56,13 +56,14 @@ form {
 
     .controls {
         > * {
-            width: 25px;
+            height: 30px;
             margin-right: 10px;
             cursor: pointer;
         }
 
         img {
-            width: 100%;
+            height: 100%;
+            width: auto;
         }
     }
 }
