--- a/src/app/components/mail-project/mail-project.component.html
+++ b/src/app/components/mail-project/mail-project.component.html
@@ -27,11 +27,11 @@
     <input type="submit" value="Mail verzenden">
   </div>
 </form>
-<div class="mailList" *ngIf="project">
+<div class="wrapper mailList" *ngIf="project">
   <div class="mail" *ngFor="let mail of project.mails">
     <div class="sender">{{mail.sender}}</div>
     <div class="receiver">{{mail.receiver}}</div>
     <div class="dateSent">{{mail.dateSent}}</div>
-    <div class="mailBody">{{mail.body}}</div>
+    <div class="mailBody" [innerHTML]="mail.body"></div>
   </div>
 </div>
