submenu needs better positioning for hover

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -40,7 +40,7 @@ a {
     z-index: 1;
     display: none;
     right: 0;
-    top: 28px;
+    padding-top: 6px;
 
     a {
         padding: .5em 1.5em;
