company added to map

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -12,7 +12,7 @@
       <p>Datum: {{projectService.formatDate(m.datePlanned)}}</p>
       <p>Uur: {{m.hourPlanned}}</p>
       <p>Status: {{projectService.statusName(m.status)}}</p>
-      <p>Uitvoerder: {{projectService.executorName(m.executor)}}</p>
+      <p>Bedrijf: {{companyService.companyName(m.company)}}</p>
     </agm-info-window>
 
   </agm-marker>
