--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -88,7 +88,7 @@
     padding: 0 15px;
     margin: 10px 0;
     display: grid;
-    grid-template-columns: 100px 1fr 100px 150px 15px;
+    grid-template-columns: 100px 1fr 100px 170px 15px;
     transition: 0.5s ease;
 
     &.selected {
@@ -105,6 +105,7 @@
     .company {
         grid-column-start: 1;
         grid-row-start: 1;
+        font-weight: bold;
     }
 
     .dateHourCreated {
