some style changes for mailing

--- a/src/app/components/mail-project/mail-project.component.html
+++ b/src/app/components/mail-project/mail-project.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="inputGroup textarea">
-    <label for="body">Onderwerp</label>
+    <label for="body">Inhoud</label>
     <textarea name="body" id="body" formControlName="body" rows="3"></textarea>
     <p *ngIf="formService.checkInputField(mailForm, 'body', submitted)" class="error">!</p>
   </div>
