inputs need the width

--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -23,6 +23,10 @@ option,
     flex-grow: 1;
 }
 
+input {
+    width: 100%;
+}
+
 input[type='submit'] {
     width: inherit;
     cursor: pointer;
