adding back the status colors

--- a/src/assets/sass/_status-colors.scss
+++ b/src/assets/sass/_status-colors.scss
@@ -10,7 +10,8 @@ $conformityAvailable: #25d00d;
 $completed: #8ab047;
 
 @mixin status-color($color) {
-    .status {
+    .status,
+    .read {
         color: $color;
     }
 
