everything was in status color, oops

--- a/src/assets/sass/_status-colors.scss
+++ b/src/assets/sass/_status-colors.scss
@@ -11,7 +11,7 @@ $completed: #8ab047;
 
 @mixin status-color($color) {
     .status,
-    .read {
+    .status .read {
         color: $color;
     }
 
