adding ctrl/metakey for status change

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -65,6 +65,8 @@
             
             <div class="status">
                 <div class="read" (click)="selectProject(project)"
+                (window:keydown)="registerCtrlKey($event)"
+                (window:keyup)="registerCtrlKey($event)"
                     *ngIf="!isSelected(project) || batchMode">
                     {{projectService.statusName(project.status)}}
                 </div>
