hide double status input for now

--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -355,7 +355,7 @@
           <p *ngIf="formService.checkInputField(projectForm, 'hourPlanned', submitted)" class="error">!</p>
         </div>
       </div>
-    </div>
+    <!-- </div>
     <div class="projectRow">
       <label for="status">Status: <span *ngIf="projectForm.controls.status.validator !== null">*</span></label>
       <div class="inputField">
@@ -371,7 +371,7 @@
           <p *ngIf="formService.checkInputField(projectForm, 'status', submitted)" class="error">!</p>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   
 
