correct commenting out...

--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -355,8 +355,8 @@
           <p *ngIf="formService.checkInputField(projectForm, 'hourPlanned', submitted)" class="error">!</p>
         </div>
       </div>
-    <!-- </div>
-    <div class="projectRow">
+    </div>
+    <!-- <div class="projectRow">
       <label for="status">Status: <span *ngIf="projectForm.controls.status.validator !== null">*</span></label>
       <div class="inputField">
         <div class="read status" (click)="changeEditState('status', true)" [ngClass]="{'empty': isEmpty('status')}"
