adding status coloring for onHoldByClient

--- a/src/assets/sass/_status-colors.scss
+++ b/src/assets/sass/_status-colors.scss
@@ -44,7 +44,8 @@ $completed: #8ab047;
     @include status-color($planned);
 }
 
-.onHold {
+.onHold,
+.onHoldByClient {
     @include status-color($onHold);
 }
 
