eventId instad of calendarId and adding target _blank

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -8,15 +8,15 @@
 
     <agm-info-window>
       <h2><a routerLink="/project/{{m.id}}" routerLinkActive="active">{{m.title}}</a></h2>
-      <p>Adres: <a href="https://www.google.be/maps/search/{{m.street}}+{{m.postalCode}}+{{m.city}}">{{m.street}}, {{m.postalCode}} {{m.city}}</a></p>
+      <p>Adres: <a href="https://www.google.be/maps/search/{{m.street}}+{{m.postalCode}}+{{m.city}}" target="_blank">{{m.street}}, {{m.postalCode}} {{m.city}}</a></p>
       <p>Email: <a href="mailto:{{m.email}}">{{m.email}}</a></p>
       <p>Tel: <a href="tel:{{m.tel}}">{{m.tel}}</a></p>
       <p>Tijdstip: 
-        <ng-container *ngIf="m.calendarId">
-          <a href="https://www.google.com/calendar/event?eid={{m.calendarId}}">{{projectService.formatDate(m.datePlanned)}} om
+        <ng-container *ngIf="m.eventId">
+          <a href="https://www.google.com/calendar/event?eid={{m.eventId}}" target="_blank">{{projectService.formatDate(m.datePlanned)}} om
             {{m.hourPlanned}}</a>
         </ng-container>
-        <ng-container *ngIf="!m.calendarId">
+        <ng-container *ngIf="!m.eventId">
           {{projectService.formatDate(m.datePlanned)}} om
             {{m.hourPlanned}}
         </ng-container>
